# Facial_Recognition

./: .gitignore  README.md  face_recog.ipynb  face_recog_v2.ipynb  faceid.py  layers.py  pyproject.toml
config/: system_config.json
